[gd_scene format=3 uid="uid://b43osovkohbwg"]

[ext_resource type="Texture2D" uid="uid://b610nq8aowfu3" path="res://assets/images/logos/havanatur-circular-logo.png" id="1_5c7kh"]
[ext_resource type="Script" uid="uid://b6s0ac1sfpjgy" path="res://scripts/Authentication.gd" id="1_oj5rc"]

[sub_resource type="Theme" id="Theme_login"]
default_base_scale = 1.7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 40.0
content_margin_top = 40.0
content_margin_right = 40.0
content_margin_bottom = 40.0
bg_color = Color(0.95, 0.96, 0.98, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.85, 0.9, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.1)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
content_margin_left = 15.0
content_margin_top = 12.0
content_margin_right = 15.0
content_margin_bottom = 12.0
bg_color = Color(0.12549, 0.290196, 0.533333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.094118, 0.219608, 0.411765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
content_margin_left = 15.0
content_margin_top = 12.0
content_margin_right = 15.0
content_margin_bottom = 12.0
bg_color = Color(0.188235, 0.439216, 0.803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.12549, 0.34902, 0.67451, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0
bg_color = Color(0.95, 0.97, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.85, 0.9, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="PantallaLogin" type="Control" unique_id=114498592]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_login")
script = ExtResource("1_oj5rc")

[node name="Fondo con gradiente" type="ColorRect" parent="." unique_id=1928075908]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12549, 0.290196, 0.533333, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=609136585]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelLogin" type="Panel" parent="CenterContainer" unique_id=1086978751]
custom_minimum_size = Vector2(500, 600)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelLogin" unique_id=1417318903]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Titulo" type="Label" parent="CenterContainer/PanelLogin/VBoxContainer" unique_id=1094979173]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.12549, 0.290196, 0.533333, 1)
theme_override_colors/font_outline_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 28
text = "INICIO DE SESIÓN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Logo de la empresa" type="TextureRect" parent="CenterContainer/PanelLogin/VBoxContainer" unique_id=443337963]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_5c7kh")
expand_mode = 1
stretch_mode = 6

[node name="ContenedorCampos" type="VBoxContainer" parent="CenterContainer/PanelLogin/VBoxContainer" unique_id=1706389191]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="InputUsuario" type="LineEdit" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos" unique_id=1118954961]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.23, 0.23, 0.23, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.84705883)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxFlat_4")
placeholder_text = "Usuario o Email"

[node name="ContenedorPassword" type="HBoxContainer" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos" unique_id=2125008366]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="InputPassword" type="LineEdit" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos/ContenedorPassword" unique_id=1725234926]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.26, 0.26, 0.26, 1)
theme_override_colors/font_uneditable_color = Color(0.014249998, 0.03, 0.0075, 0.5019608)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 0.84705883)
theme_override_colors/clear_button_color = Color(0.38, 0.38, 0.38, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_4")
theme_override_styles/focus = SubResource("StyleBoxFlat_4")
placeholder_text = "Contraseña"
secret = true

[node name="MostrarPassword" type="CheckBox" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos/ContenedorPassword" unique_id=626646895]
layout_mode = 2
theme_override_colors/font_color = Color(0.007843138, 0.12156863, 0.0627451, 0.7019608)
theme_override_colors/font_focus_color = Color(0.007843138, 0.12156863, 0.0627451, 0.7019608)
theme_override_font_sizes/font_size = 14
text = "Mostrar"

[node name="RecordarSesionContainer" type="HBoxContainer" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos" unique_id=1873146424]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer" type="Control" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos/RecordarSesionContainer" unique_id=1352395509]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckBox" type="CheckBox" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos/RecordarSesionContainer" unique_id=1675416058]
layout_mode = 2
theme_override_colors/font_color = Color(0.0060000014, 0.12, 0.06299999, 0.7019608)
theme_override_font_sizes/font_size = 14
text = "Recordar sesión"

[node name="BotonLogin" type="Button" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos" unique_id=1073220705]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3")
theme_override_styles/hover = SubResource("StyleBoxFlat_3")
theme_override_styles/disabled = SubResource("StyleBoxFlat_5")
theme_override_styles/focus = SubResource("StyleBoxFlat_3")
text = "INICIAR SESIÓN"

[node name="MensajeError" type="Label" parent="CenterContainer/PanelLogin/VBoxContainer/ContenedorCampos" unique_id=1103594243]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Error en las credenciales. Intente nuevamente."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelCargando" type="Panel" parent="CenterContainer/PanelLogin" unique_id=648040808]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="Semi-transparente" type="ColorRect" parent="CenterContainer/PanelLogin/PanelCargando" unique_id=428182646]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="MensajeCarga" type="Label" parent="CenterContainer/PanelLogin/PanelCargando" unique_id=392504661]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Verificando credenciales..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/PanelLogin/PanelCargando" unique_id=272483285]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
offset_left = 40.0
offset_top = 5.0
offset_right = -40.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_3")
